--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             <div class="visibility-controls">
                 <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 10px;">
                     <h4 style="color:#0FF; margin:0;">Visible Domes</h4>
+                    <button onclick="showAllDomes()" style="background: transparent; color: #0FF; border: 1px solid #0FF; padding: 2px 8px; cursor: pointer; font-size: 0.8em; border-radius: 4px;">Show All</button>
                     <button onclick="showOnlyPD()" style="background: transparent; color: #0FF; border: 1px solid #0FF; padding: 2px 8px; cursor: pointer; font-size: 0.8em; border-radius: 4px;">Show Only Pacific Domes Sizes</button>
                 </div>
                 <div id="domeVisibilityGrid" class="visibility-grid">
