Rename Sheet Width to Sheet Size, add per-row material selection, and Delete material feature

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                         </select>
                         <button onclick="editCurrentMaterial()" style="background: #002222; color: #0FF; border: 1px solid #0FF; padding: 5px 10px; cursor: pointer; white-space:nowrap;">Edit</button>
                         <button onclick="openMaterialModal()" style="background: #003333; color: #0FF; border: 1px solid #0FF; padding: 5px 10px; cursor: pointer; white-space:nowrap;">+ Add</button>
+                        <button onclick="deleteCurrentMaterial()" style="background: #330000; color: #F44; border: 1px solid #F44; padding: 5px 10px; cursor: pointer; white-space:nowrap;">Delete</button>
                     </div>
                 </div>
                 <div id="panelCostDisplay" style="margin-top: 10px; color: #AAA; font-size: 0.9em;"></div>
@@ -114,7 +115,7 @@
                 <th class="help-head" data-tooltip-id="TOOLTIP_COLUMN_CONDUIT_SAFETY">Conduit <br> Tube Size</th>
                 <th>Conduit Price <br> ($/ea)</th>
                 <th class="help-head" data-tooltip-id="TOOLTIP_COLUMN_DIAGONAL" id="head-diag">The Diagonal <br> (in)</th>
-                <th id="head-sheet">Sheet Width <br> (ft)</th>
+                <th id="head-sheet">Sheet Size <br> (Material)</th>
                 <th class="help-head" data-tooltip-id="TOOLTIP_COLUMN_STRUT_LEN">Strut Lengths <br> (End to End)</th>
                 <th>Total Conduit <br> Tubes</th>
                 <th class="help-head" data-tooltip-id="TOOLTIP_COLUMN_TOTAL_STRUTS">Total Struts</th>
