--- a/index.html
+++ b/index.html
@@ -54,18 +54,27 @@
                     <label>Nyloc Nuts ($/ea)</label>
                     <input type="number" id="priceNut" value="0.45" step="0.01" onchange="recalcAll()">
                 </div>
+            </div>
+
+            <div class="settings-grid" style="grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); border-top: 1px solid #333; padding-top: 20px; margin-top: 20px;">
                 <div class="setting-item">
-                    <label>Strut Sorting</label>
-                    <select id="strutSortSelect" onchange="recalcAll()">
-                        <option value="length">Shortest to Longest</option>
-                        <option value="alpha">Alphabetical (A-Z)</option>
+                    <div style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
+                        <label style="margin-bottom: 0;">Frequency Sorting <span class="help-head" style="cursor:help; color:#FFF; border:1px solid #555; border-radius:50%; width:16px; height:16px; display:inline-flex; align-items:center; justify-content:center; font-size:0.7em;" data-tooltip-id="TOOLTIP_DEFAULT_FREQ_SORT">?</span></label>
+                        <button id="btnFreqSort" onclick="domeConfigs.forEach((_, i) => calcRow(i, 'init')); this.style.display='none';" style="background: transparent; color: #FFA500; border: 1px solid #FFA500; padding: 2px 8px; cursor: pointer; font-size: 0.8em; border-radius: 4px; display: none;">SORT IT!</button>
+                    </div>
+                    <select id="freqOptimizeSelect" onchange="document.getElementById('btnFreqSort').style.display='block';">
+                        <option value="freq">Lowest Frequency (Easiest 2 Build)</option>
+                        <option value="price">Lowest Price (Budget)</option>
                     </select>
                 </div>
                 <div class="setting-item">
-                    <label>Optimize Frequency <span class="help-head" style="cursor:help; color:#FFF; border:1px solid #555; border-radius:50%; width:16px; height:16px; display:inline-flex; align-items:center; justify-content:center; font-size:0.7em;" data-tooltip-id="TOOLTIP_DEFAULT_FREQ_OPTIMIZE">?</span></label>
-                    <select id="freqOptimizeSelect" onchange="recalcAll()">
-                        <option value="freq">Lowest Frequency (Complexity)</option>
-                        <option value="price">Lowest Price (Budget)</option>
+                    <div style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
+                        <label style="margin-bottom: 0;">Strut Sorting <span class="help-head" style="cursor:help; color:#FFF; border:1px solid #555; border-radius:50%; width:16px; height:16px; display:inline-flex; align-items:center; justify-content:center; font-size:0.7em;" data-tooltip-id="TOOLTIP_COLUMN_STRUT_SORT">?</span></label>
+                        <button id="btnStrutSort" onclick="recalcAll(); this.style.display='none';" style="background: transparent; color: #FFA500; border: 1px solid #FFA500; padding: 2px 8px; cursor: pointer; font-size: 0.8em; border-radius: 4px; display: none;">SORT IT!</button>
+                    </div>
+                    <select id="strutSortSelect" onchange="document.getElementById('btnStrutSort').style.display='block';">
+                        <option value="length">Shortest to Longest</option>
+                        <option value="alpha">Alphabetical (A-Z)</option>
                     </select>
                 </div>
                 <div class="setting-item" style="flex-direction: row; align-items: center; gap: 10px;">
@@ -82,9 +91,9 @@
                         <select id="panelMaterialSelect" onchange="updatePanelCost()" style="flex-grow:1;">
                             <!-- Populated by JS -->
                         </select>
-                        <button onclick="editCurrentMaterial()" style="background: #002222; color: #0FF; border: 1px solid #0FF; padding: 5px 10px; cursor: pointer; white-space:nowrap;">Edit</button>
-                        <button onclick="openMaterialModal()" style="background: #003333; color: #0FF; border: 1px solid #0FF; padding: 5px 10px; cursor: pointer; white-space:nowrap;">+ Add</button>
-                        <button onclick="deleteCurrentMaterial()" style="background: #330000; color: #F44; border: 1px solid #F44; padding: 5px 10px; cursor: pointer; white-space:nowrap;">Delete</button>
+                        <button onclick="editCurrentMaterial()" style="background: transparent; color: #0FF; border: 1px solid #0FF; padding: 2px 8px; cursor: pointer; font-size: 0.8em; border-radius: 4px; white-space:nowrap;">Edit</button>
+                        <button onclick="openMaterialModal()" style="background: transparent; color: #0FF; border: 1px solid #0FF; padding: 2px 8px; cursor: pointer; font-size: 0.8em; border-radius: 4px; white-space:nowrap;">+ Add</button>
+                        <button onclick="deleteCurrentMaterial()" style="background: transparent; color: #F44; border: 1px solid #F44; padding: 2px 8px; cursor: pointer; font-size: 0.8em; border-radius: 4px; white-space:nowrap;">Delete</button>
                     </div>
                 </div>
                 <div id="panelCostDisplay" style="margin-top: 10px; color: #AAA; font-size: 0.9em;"></div>
@@ -94,6 +103,7 @@
                 <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 10px;">
                     <h4 style="color:#0FF; margin:0;">Visible Domes</h4>
                     <button onclick="showAllDomes()" style="background: transparent; color: #0FF; border: 1px solid #0FF; padding: 2px 8px; cursor: pointer; font-size: 0.8em; border-radius: 4px;">Show All</button>
+                    <button onclick="hideAllDomes()" style="background: transparent; color: #0FF; border: 1px solid #0FF; padding: 2px 8px; cursor: pointer; font-size: 0.8em; border-radius: 4px;">Hide All</button>
                     <button onclick="showOnlyPD()" style="background: transparent; color: #0FF; border: 1px solid #0FF; padding: 2px 8px; cursor: pointer; font-size: 0.8em; border-radius: 4px;">Show Only Pacific Domes Sizes</button>
                 </div>
                 <div id="domeVisibilityGrid" class="visibility-grid">
@@ -275,8 +285,7 @@
                     <label>Type</label>
                     <select id="newMatType" onchange="toggleMatInputs()">
                         <option value="sheet">Sheet (4x8, etc)</option>
-                        <option value="roll">Roll (Wrap, etc)</option>
-                        <option value="unit">Unit (Yards, etc)</option>
+                        <option value="roll">Roll (30x90, etc)</option>
                     </select>
                 </div>
 
